# Atomic

./: CMakeLists.txt  Readme.md
atomic_lib/: CMakeLists.txt
atomic_lib/src/layout/: element.hpp
atomic_lib/src/layout/atomicEngine/: engine.hpp
atomic_lib/src/math/: vec.hpp
atomic_lib/src/renderer/: interface.hpp  style.hpp
atomic_lib/src/renderer/font/: freetype_font.cpp  freetype_font.hpp  freetype_layout.hpp  interface.hpp
atomic_lib/src/renderer/utils/: color.hpp
atomic_lib/src/renderer/vulkan/: vulkan_draw.cpp  vulkan_renderer.cpp  vulkan_renderer.hpp  vulkan_shader.cpp  vulkan_shader.hpp
atomic_lib/src/renderer/vulkan/shaders/: ui.frag  ui.frag.spv  ui.vert  ui.vert.spv
atomic_lib/src/windowing/: interface.hpp
atomic_lib/src/windowing/linux/: window_sdl.cpp  window_sdl.hpp
sandbox/: CMakeLists.txt  main.cpp
